--- a/ZhuyinRace/index.html
+++ b/ZhuyinRace/index.html
@@ -46,9 +46,12 @@
         }
 
         function draw(){
+            // var zhuyinList = ["ㄅ","ㄆ","ㄇ","ㄈ","ㄉ","ㄊ","ㄋ","ㄌ","ㄍ","ㄎ","ㄏ","ㄐ","ㄑ","ㄒ","ㄓ","ㄔ","ㄕ","ㄖ","ㄗ","ㄘ","ㄙ",
+            //     "ㄧ","ㄨ","ㄩ",
+            //     "ㄚ","ㄛ","ㄜ","ㄝ","ㄞ","ㄟ","ㄠ","ㄡ","ㄢ","ㄣ","ㄤ","ㄥ","ㄦ"
+            // ];
             var zhuyinList = ["ㄅ","ㄆ","ㄇ","ㄈ","ㄉ","ㄊ","ㄋ","ㄌ","ㄍ","ㄎ","ㄏ","ㄐ","ㄑ","ㄒ","ㄓ","ㄔ","ㄕ","ㄖ","ㄗ","ㄘ","ㄙ",
-                "ㄧ","ㄨ","ㄩ",
-                "ㄚ","ㄛ","ㄜ","ㄝ","ㄞ","ㄟ","ㄠ","ㄡ","ㄢ","ㄣ","ㄤ","ㄥ","ㄦ"
+                "ㄧ","ㄨ","ㄩ"
             ];
             var randomIndex = Math.floor(Math.random() * zhuyinList.length);
             var randomZhuyin = zhuyinList[randomIndex];
