--- a/ZhuyinRace/index.html
+++ b/ZhuyinRace/index.html
@@ -22,7 +22,7 @@
         }
 
         .custom-display-3 {
-            font-size: calc(1rem + 4.5vw);
+            font-size: calc(0.75rem + 4.5vw);
             font-weight: 1000;
             line-height: 1;
             text-align: center;
@@ -30,28 +30,63 @@
     </style>
     <script>
         var score = 0;
-        window.onload = function(){
+        window.onload = function () {
 
         }
 
-        function plusOne(){
+        function plusOne() {
             score += 1;
             document.getElementById("scoreDisplay").innerText = score;
         }
 
-        function takeOne(){
+        function takeOne() {
             score -= 1;
             if (score <= 0) score = 0;
             document.getElementById("scoreDisplay").innerText = score;
         }
 
-        function draw(){
+        let startTime;
+        let elapsedTime = 0;
+        let timerInterval;
+
+        function timeToString(time) {
+            let diffInHrs = time / 3600000;
+            let hh = Math.floor(diffInHrs);
+
+            let diffInMin = (diffInHrs - hh) * 60;
+            let mm = Math.floor(diffInMin);
+
+            let diffInSec = (diffInMin - mm) * 60;
+            let ss = Math.floor(diffInSec);
+
+            let formattedMM = mm.toString().padStart(2, "0");
+            let formattedSS = ss.toString().padStart(2, "0");
+            let formattedHH = hh.toString().padStart(2, "0");
+
+            //return `${formattedHH}:${formattedMM}:${formattedSS}`;
+            return `${formattedMM}:${formattedSS}`;
+        }
+
+        function startTimer() {
+            startTime = Date.now() - elapsedTime;
+            timerInterval = setInterval(function printTime() {
+                elapsedTime = Date.now() - startTime;
+                document.getElementById("timer").innerText = timeToString(elapsedTime);
+            }, 1000); // 每秒更新一次
+        }
+
+        function resetTimer() {
+            clearInterval(timerInterval);
+            elapsedTime = 0;
+        }
+
+        function draw() {
             // var zhuyinList = ["ㄅ","ㄆ","ㄇ","ㄈ","ㄉ","ㄊ","ㄋ","ㄌ","ㄍ","ㄎ","ㄏ","ㄐ","ㄑ","ㄒ","ㄓ","ㄔ","ㄕ","ㄖ","ㄗ","ㄘ","ㄙ",
             //     "ㄧ","ㄨ","ㄩ",
             //     "ㄚ","ㄛ","ㄜ","ㄝ","ㄞ","ㄟ","ㄠ","ㄡ","ㄢ","ㄣ","ㄤ","ㄥ","ㄦ"
             // ];
-            var zhuyinList = ["ㄅ","ㄆ","ㄇ","ㄈ","ㄉ","ㄊ","ㄋ","ㄌ","ㄍ","ㄎ","ㄏ","ㄐ","ㄑ","ㄒ","ㄓ","ㄔ","ㄕ","ㄖ","ㄗ","ㄘ","ㄙ",
-                "ㄧ","ㄨ","ㄩ"
+            var zhuyinList = ["ㄅ", "ㄆ", "ㄇ", "ㄈ", "ㄉ", "ㄊ", "ㄋ", "ㄌ", "ㄍ", "ㄎ", "ㄏ", "ㄐ", "ㄑ", "ㄒ", "ㄓ", "ㄔ", "ㄕ", "ㄖ", "ㄗ", "ㄘ", "ㄙ",
+                "ㄧ", "ㄨ", "ㄩ"
             ];
             var randomIndex = Math.floor(Math.random() * zhuyinList.length);
             var randomZhuyin = zhuyinList[randomIndex];
@@ -61,8 +96,10 @@
             randomIndex = Math.floor(Math.random() * zhuyinList.length);
             randomZhuyin = zhuyinList[randomIndex];
             document.getElementById("zhuyin2").innerText = randomZhuyin;
+
+            resetTimer()
+            startTimer();
         }
-        
     </script>
 </head>
 
@@ -77,14 +114,14 @@
                 <p id="zhuyin2" class="custom-display-1">?</p>
             </div>
             <div class="col-4">
-                 <div class="row">
+                <div class="row">
                     <div style="display: block;height: 40px;">
                         <span></span>
                     </div>
                 </div>
                 <div class="row">
                     <div style="display: block;height: 20px;">
-                        <p>Score:</p>
+                        <p>分數:</p>
                     </div>
                 </div>
                 <div class="row">
@@ -105,7 +142,13 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-primary custom-display-3" style="width: 100%; height: 150px;" onclick="draw()">抽題！</button>
+                        <button class="btn btn-primary custom-display-3" style="width: 100%; height: 150px;"
+                            onclick="draw()">抽題！</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div style="display: block;height: 20px;">
+                        <p id="timer">00:00</p>
                     </div>
                 </div>
             </div>
