--- a/ZhuyinRace/index.html
+++ b/ZhuyinRace/index.html
@@ -97,6 +97,7 @@
             randomZhuyin = zhuyinList[randomIndex];
             document.getElementById("zhuyin2").innerText = randomZhuyin;
 
+            document.getElementById("timer").innerText = "00:00";
             resetTimer()
             startTimer();
         }
